--- a/meson_options.txt
+++ b/meson_options.txt
@@ -31,7 +31,7 @@ option('mxnet-support', type: 'feature', value: 'auto')
 option('enable-test', type: 'boolean', value: true)
 option('install-test', type: 'boolean', value: false)
 option('enable-pytorch-use-gpu', type: 'boolean', value: false) # default value, can be specified at run time
-option('enable-mediapipe', type: 'boolean', value: false)
+option('enable-mediapipe', type: 'boolean', value: true)
 option('enable-env-var', type: 'boolean', value: true)
 option('enable-symbolic-link', type: 'boolean', value: true)
 option('enable-tizen', type: 'boolean', value: false)
